set(SOURCE_FILES 
  CameraMotion.cpp
  ZBonus.cpp
  ZBonusAutopilot.cpp
  ZBonusBooster.cpp
  ZBonusDestructionShield.cpp
  ZBonusEnergy.cpp
  ZBonusGravityGrip.cpp
  ZBonusHomingMissile.cpp
  ZBonusMachineGun.cpp
  ZBonusMine.cpp
  ZBonusMissile.cpp
  ZBonusParameters.cpp
  ZBonusProtectionShield.cpp
  ZBonusSmoke.cpp
  ZDDEGame.cpp
  ZDedicatedGames.cpp
  ZExplosion.cpp
  ZGameEntitiesManager.cpp
  ZGameEntity.cpp
  ZGameTriggers.cpp
  ZGuiConfig.cpp
  ZGuiCredits.cpp
  ZGuiEndResults.cpp
  ZGuiIngameMenu.cpp
  ZGuiLan.cpp
  ZGuiMainMenu.cpp
  ZGuiMessagebox.cpp
  ZGuiMusic.cpp
  ZGuiNetStates.cpp
  ZGuiProgress.cpp
  ZGuiQuickrace.cpp
  ZGuiSpectator.cpp
  ZGuiStatistics.cpp
  ZGuiUtils.cpp
  ZHUDClassicRaceMeshModifier.cpp
  ZLapsTimes.cpp
  ZLocalisation.cpp
  ZMine.cpp
  ZMissile.cpp
  ZNetExplosion.cpp
  ZNetFactory.cpp
  ZNetMine.cpp
  ZNetMissile.cpp
  ZNetShip.cpp
  ZProtoConfig.cpp
  ZProtoGUI.cpp
  ZRushGame.cpp
  ZRushGameContent.cpp
  ZRushNetGame.cpp
  ZRushNetGameClient.cpp
  ZRushNetGameServer.cpp
  ZRushTrack.cpp
  ZShip.cpp
  ZShipAI.cpp
  ZShipBonus.cpp
  ZShipEffects.cpp
  ZShipPhysics.cpp
  ZTrackBonus.cpp
)

add_library(
	game
	${SOURCE_FILES}
)

# We need C++11 features
if(CMAKE_VERSION VERSION_LESS 3.1)
	add_definitions(--std=c++11)
else()
	set_property(TARGET game PROPERTY CXX_STANDARD 11)
	set_property(TARGET game PROPERTY CXX_STANDARD_REQUIRED ON)
endif()
